[package]
name = "term_lattice"
version = "0.1.1"
edition = "2021"

license = "MIT"
description = "Used to use ANSI output dot matrix drawing boards on terminals that support VT100. Due to the use of incremental output, it is very fast."
homepage = "https://github.com/A4-Tacks/rust-term_lattice"
repository = "https://github.com/A4-Tacks/rust-term_lattice"
readme = "./README.md"
keywords = ["terminal", "tui", "draw", "plot", "ansi_term"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_variant_eq = "0.1.0"
